# chhaajaa

./: .env-local  .gitignore  Dockerfile  README.md  docker-compose-windows.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-temp.txt  requirements.txt  setup.py
.github/workflows/: docker.yaml
bakBakGangIndex/: apps.py  block.py  models.py
bakBakGangIndex/migrations/: 0001_initial.py  0002_auto_20220207_1705.py  0003_auto_20220226_1528.py  0004_auto_20220226_1733.py  0005_auto_20220611_0807.py  0006_auto_20220611_0809.py  0007_auto_20220623_1916.py  0008_bolbehanpage_background_header_image.py  0009_bolbehanpage_header_title.py  0010_bolbehanpage_header_subtitle.py  0011_auto_20230629_1357.py
blog/: models.py  views.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpage_icon.py  0004_auto_20201105_0653.py  0005_auto_20201109_0907.py  0006_blogindexpage_button.py  0007_remove_blogindexpage_button.py  0008_blogindexpage_button.py  0009_remove_blogindexpage_button.py  0010_blogindexpage_button.py  0011_remove_blogpage_intro.py  (+7 more)
chajaa/: api.py  feeds.py  urls.py  wsgi.py
gunicorn/: config.py
home/: block.py  models.py
rapidpro/: requirements.txt  rpp_ftbl_auth_user.py  rpp_ftbl_contacts.py  rpp_ftbl_contacts_contactgroupcount.py  rpp_ftbl_flows_flow.py  rpp_ftbl_flows_flow_label.py  rpp_ftbl_flows_flowrun.py  rpp_ftbl_flows_flowstart.py  rpp_ftbl_msgs_broadcast_urns.py  rpp_ftbl_msgs_msg.py
sahi_salah/: apps.py  block.py  models.py
service/: api_serializers.py  models.py  snippets.py
(+182 files in other folders)
