[tool.poetry]
name = "chhaajaa"
version = "0.1.0"
description = ""
authors = ["Kyriakos Toumbas <kyriakos@pixelactions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "2.15.6"
wagtailmenus = "3.1.3"
psycopg2 = "2.9.3"
dj-database-url = "0.5.0"
django-storages = "1.12.3"
boto3 = "1.20.48"
django-cors-headers = "3.10.1"
django-redis = "5.2.0"
wagtail-robots = "0.3.1"
sentry-sdk = "1.5.4"
pymemcache = "3.5.0"
typing-extensions = "4.1.1"
django-storage-url = "^0.9.2"
python-dotenv = "^1.0.0"
click = "8.1.3"
click-aliases = "1.0.1"
deprecated = "1.2.13"
divio-cli = "3.15.6"
django-environ = "0.8.1"
executing = "0.8.3"
html5lib = "1.1"
pyparsing = "3.0.7"
pandas = "1.2.5"
pyodbc = "4.0.26"
sqlalchemy = "1.4.31"
sendgrid = "6.1.0"
pytest = "5.2.2"
pytest-mock = "1.11.2"
redshift-connector = "=2.0.904"
facebook-business = "^16.0.2"
google-api-python-client = "^2.86.0"
oauth2client = "^4.1.3"
insta-scrape = "^2.1.2"
google-auth-oauthlib = "^1.0.0"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
